<resources>
    <string name="app_name">Mr B</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="email_address">Email address</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_remember_password">Don\'t Remember password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="or">or</string>
    <string name="logo">logo</string>
    <string name="todo">TODO</string>
    <string name="enter_message">Enter Message...</string>
    <string name="todo2">TODO</string>

</resources>
